unsupported/security-groups-for-2nic-bigip.template
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "AWS CloudFormation Template for creating security groups for a 2nic BIG-IP",
  "Outputs": {
    "BigipExternalSecurityGroup": {
      "Description": "Public or External Security Group",
      "Value": {
        "Ref": "BigipExternalSecurityGroup"
      }
    },
    "BigipManagementSecurityGroup": {
      "Description": "Management Security Group",
      "Value": {
        "Ref": "BigipManagementSecurityGroup"
      }
    }
  },
  "Parameters": {
    "SSHLocation": {
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x.",
      "Default": "0.0.0.0/0",
      "Description": " The IP address range that can be used to SSH to the EC2 instances",
      "MaxLength": "18",
      "MinLength": "9",
      "Type": "String"
    },
    "Vpc": {
      "ConstraintDescription": "Must be an existing VPC within working region.",
      "Type": "AWS::EC2::VPC::Id"
    }
  },
  "Resources": {
    "BigipExternalSecurityGroup": {
      "Properties": {
        "GroupDescription": "Public or External interface rules",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": "80",
            "IpProtocol": "tcp",
            "ToPort": "80"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": "443",
            "IpProtocol": "tcp",
            "ToPort": "443"
          },
          {
            "CidrIp": "0.0.0.0/0",
            "FromPort": "4353",
            "IpProtocol": "tcp",
            "ToPort": "4353"
          },
          {
            "CidrIp": "10.0.0.0/16",
            "FromPort": "1026",
            "IpProtocol": "udp",
            "ToPort": "1026"
          },
          {
            "CidrIp": "10.0.0.0/16",
            "FromPort": "6123",
            "IpProtocol": "tcp",
            "ToPort": "6128"
          }
        ],
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "Bigip External Security Group"
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    },
    "BigipManagementSecurityGroup": {
      "Properties": {
        "GroupDescription": "Big-IP Management UI rules",
        "SecurityGroupIngress": [
          {
            "CidrIp": {
              "Ref": "SSHLocation"
            },
            "FromPort": "22",
            "IpProtocol": "tcp",
            "ToPort": "22"
          },
          {
            "CidrIp": {
              "Ref": "SSHLocation"
            },
            "FromPort": "443",
            "IpProtocol": "tcp",
            "ToPort": "443"
          },
          {
            "CidrIp": {
              "Ref": "SSHLocation"
            },
            "FromPort": "-1",
            "IpProtocol": "icmp",
            "ToPort": "-1"
          }
        ],
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "AWS::StackName"
            }
          },
          {
            "Key": "Name",
            "Value": "Bigip Management Security Group"
          }
        ],
        "VpcId": {
          "Ref": "Vpc"
        }
      },
      "Type": "AWS::EC2::SecurityGroup"
    }
  }
}
